docs: trim README